se agrega explicación de uso de collect y toList